Fix bug 313961: avoid making history items in the UI for "hidden" global history entries, such as those for subframes.